@@ -17,6 +17,8 @@ eglibc (2.13-9) UNRELEASED; urgency=low
     Closes: #632452.
   * debhelper.in/libc.preinst: only check for already unpacked versions of the
     libc during upgrades.  Closes: #632190, #632509.
+  * Install arch dependent headers in the multiarch include directory, patch by
+    Marcin Juszkiewicz. Tag libc*-dev as Multi-Arch: same.
 
  -- Samuel Thibault <sthibault@debian.org>  Thu, 30 Jun 2011 09:52:43 +0200
 
